[gd_scene load_steps=36 format=2]

[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death1.png" type="Texture" id=1]
[ext_resource path="res://Sprite/mobs/wizard/spritesheet/wizard.png" type="Texture" id=2]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death2.png" type="Texture" id=3]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death3.png" type="Texture" id=4]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death4.png" type="Texture" id=5]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death5.png" type="Texture" id=6]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death6.png" type="Texture" id=7]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death7.png" type="Texture" id=8]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death8.png" type="Texture" id=9]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death9.png" type="Texture" id=10]
[ext_resource path="res://Script/wizar_Mob.gd" type="Script" id=11]

[sub_resource type="CapsuleShape2D" id=17]
radius = 14.0
height = 14.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 486, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 567, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 648, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 729, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 810, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 891, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 972, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 1053, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 1134, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 81, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 162, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 243, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 324, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 405, 0, 81, 66 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "death",
"speed": 8.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "fireball",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=23]
radius = 19.0
height = 12.0

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anim_sprites:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim_sprites:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.905882, 0.0627451, 0.0627451, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=24]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anim_sprites:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim_sprites:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.905882, 0.0627451, 0.0627451, 1 ), Color( 0.905882, 0.0627451, 0.0627451, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=22]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fireball" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="CircleShape2D" id=18]
radius = 202.01

[node name="wizard" type="RigidBody2D" groups=["mobs"]]
collision_layer = 4
collision_mask = 35
mode = 2
mass = 20.46
gravity_scale = 3.63
contact_monitor = true
script = ExtResource( 11 )

[node name="coll_wizard" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13 )
shape = SubResource( 17 )

[node name="anim_sprites" type="AnimatedSprite" parent="."]
modulate = Color( 0.905882, 0.0627451, 0.0627451, 1 )
frames = SubResource( 16 )
animation = "idle"
__meta__ = {
"_edit_lock_": true
}

[node name="hurbox" type="Area2D" parent="." groups=["hurtboxs"]]
collision_layer = 4
collision_mask = 35

[node name="coll_hurtbox" type="CollisionShape2D" parent="hurbox"]
position = Vector2( 0, 13 )
shape = SubResource( 23 )

[node name="shot_speed" type="Timer" parent="."]
process_mode = 0

[node name="anim_wizard" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 19 )
anims/death = SubResource( 20 )
anims/hurt = SubResource( 24 )
anims/idle = SubResource( 21 )
anims/shoot = SubResource( 22 )

[node name="area_wizard" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3
space_override = 2

[node name="coll_area" type="CollisionShape2D" parent="area_wizard"]
modulate = Color( 0.905882, 0.027451, 0.027451, 1 )
self_modulate = Color( 0.894118, 0.101961, 0.101961, 1 )
position = Vector2( 0, 13 )
shape = SubResource( 18 )

[node name="aiming" type="Node2D" parent="."]
position = Vector2( 0, 13 )

[node name="aim1" type="RayCast2D" parent="aiming"]
enabled = true
collision_mask = 3

[node name="aim2" type="RayCast2D" parent="aiming"]
rotation = 0.256999
enabled = true
collision_mask = 3

[node name="aim3" type="RayCast2D" parent="aiming"]
rotation = -0.25695
enabled = true
collision_mask = 3

[connection signal="area_entered" from="hurbox" to="." method="_on_hurbox_area_entered"]
[connection signal="area_exited" from="hurbox" to="." method="_on_hurbox_area_exited"]
[connection signal="body_entered" from="area_wizard" to="." method="_on_area_wizard_body_entered"]
